--- a/index.html
+++ b/index.html
@@ -2,116 +2,38 @@
 <html lang="en">
   <head>
     <title>Chatbot test 1</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css">
-    <link rel="stylesheet" href="index.css">    
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel='stylesheet prefetch' href='https://fonts.googleapis.com/css?family=Open+Sans'>
+    <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.1.3/jquery.mCustomScrollbar.min.css'>
+    <link rel="stylesheet" href="css/style.css">    
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>    
   </head>
   <body>
 
-    <span id="leftMessageTemplate" style="visibility:hidden">
-      <li class="left clearfix"><span class="chat-img pull-left">
-          <img src="http://placehold.it/50/55C1E7/fff&text=BOT" alt="API.AI" class="img-circle" />
-      </span>
-          <div class="chat-body clearfix">
-              <div class="header">
-                      <small><span class="glyphicon glyphicon-time"></span>12 mins ago</small>
-              </div>
-              <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur bibendum ornare
-                  dolor, quis ullamcorper ligula sodales.
-              </p>
-          </div>
-      </li>
-    </span>  
 
-    <span id="rightMessageTemplate" style="visibility:hidden">
-      <li class="right clearfix"><span class="chat-img pull-right">
-          <img src="http://placehold.it/50/FA6F57/fff&text=ME" alt="Me" class="img-circle" />
-      </span>
-          <div class="chat-body clearfix">
-              <div class="header">
-                  <small class=" text-muted"><span class="glyphicon glyphicon-time"></span>13 mins ago</small>
-              </div>
-              <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur bibendum ornare
-                  dolor, quis ullamcorper ligula sodales.
-              </p>
-          </div>
-      </li>
-    </span>      
+<div class="chat">
+  <div class="chat-title">
+    <h1>ChatBot test 1</h1>
+    <h2>API.AI</h2>
+    <figure class="avatar">
+      <img src="http://s3-us-west-2.amazonaws.com/s.cdpn.io/156381/profile/profile-80_4.jpg" /></figure>
+  </div>
+  <div class="messages">
+    <div class="messages-content"></div>
+  </div>
+  <div class="message-box">
+    <textarea type="text" class="message-input" placeholder="Type message..."></textarea>
+    <button type="submit" class="message-submit">Send</button>
+  </div>
 
+</div>
+<div class="bg"></div>
+<script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+<script src='https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.1.3/jquery.mCustomScrollbar.concat.min.js'></script>
 
+<script src="js/index.js"></script>
 
-    <div class="container">
-        <div class="row">
-            <div class="col-md-5">
-                <div class="panel panel-primary">
-                    <div class="panel-heading">
-                        <span class="glyphicon glyphicon-comment"></span> API.AI bot
-                        <div class="btn-group pull-right">
-                            <button type="button" class="btn btn-default btn-xs dropdown-toggle" data-toggle="dropdown">
-                                <span class="glyphicon glyphicon-chevron-down"></span>
-                            </button>
-                            <ul class="dropdown-menu slidedown">
-                                <li><a href="http://www.jquery2dotnet.com"><span class="glyphicon glyphicon-refresh">
-                                </span>Refresh</a></li>
-                                <li><a href="http://www.jquery2dotnet.com"><span class="glyphicon glyphicon-ok-sign">
-                                </span>Available</a></li>
-                                <li><a href="http://www.jquery2dotnet.com"><span class="glyphicon glyphicon-remove">
-                                </span>Busy</a></li>
-                                <li><a href="http://www.jquery2dotnet.com"><span class="glyphicon glyphicon-time"></span>
-                                    Away</a></li>
-                                <li class="divider"></li>
-                                <li><a href="http://www.jquery2dotnet.com"><span class="glyphicon glyphicon-off"></span>
-                                    Sign Out</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="panel-body">
-                        <ul class="chat" id="chatBox">
-                        </ul>
-                    </div>
-                    <div class="panel-footer">
-                        <div class="input-group">
-                            <input id="btn-input" type="text" class="form-control input-sm" placeholder="Type your message here..." />
-                            <span class="input-group-btn">
-                                <button class="btn btn-warning btn-sm" id="btn-chat">
-                                    Send</button>
-                            </span>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <script>
-      var socket = io();
-
-      $('#btn-chat').click(function(){
-
-        if ($('#btn-input').val()) {
-          var payload = {
-            message: $('#btn-input').val(),
-          }
-          socket.emit('chat message', payload);
-          $('#btn-input').val('');
-          return false;                    
-        }
-      });
-
-      socket.on('chat message', function(response){
-
-        var messageTemplate = (response.from === "self") ? "rightMessageTemplate" : "leftMessageTemplate";
-        $("#" + messageTemplate + " li p").text(response.content);
-        $('#chatBox').append($('#' + messageTemplate)[0].innerHTML);            
-
-//        $('#messages').append($('<li>').text(msg));
-      });
-    </script>    
 
 <!--    <ul id="messages"></ul>
     <form action="">
