Logo modification + random excuses

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <h1>ChatBot test 1</h1>
     <h2>API.AI</h2>
     <figure class="avatar">
-      <img src="http://s3-us-west-2.amazonaws.com/s.cdpn.io/156381/profile/profile-80_4.jpg" /></figure>
+      <img src="images/apiai.png" /></figure>
   </div>
   <div class="messages">
     <div class="messages-content"></div>
