--- a/index.html
+++ b/index.html
@@ -3,22 +3,22 @@
   <head>
     <title>Chatbot test 1</title>
     <link rel="stylesheet" href="css/normalize.css">
+    <link rel='stylesheet prefetch' href='fonts/stylesheet.css'>
     <link rel='stylesheet prefetch' href='https://fonts.googleapis.com/css?family=Open+Sans'>
+    <link rel='stylesheet prefetch' href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>    
     <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.1.3/jquery.mCustomScrollbar.min.css'>
     <link rel="stylesheet" href="css/style.css">    
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
-    <script src="js/markdown.min.js"></script>    
   </head>
   <body>
 
 
 <div class="chat">
   <div class="chat-title">
-    <h1>ChatBot test 1</h1>
-    <h2>API.AI</h2>
+    <h1>BotBank! demo</h1>
     <figure class="avatar">
-      <img src="images/apiai.png" /></figure>
+      <img src="images/avatar-bot-75.png" /></figure>
   </div>
   <div class="messages">
     <div class="messages-content"></div>
