--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
   <head>
     <title>Chatbot test 1</title>
     <link rel="stylesheet" href="css/normalize.css">
+
+    <!-- corporate fonts -->
     <link rel='stylesheet prefetch' href='fonts/stylesheet.css'>
     <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.1.3/jquery.mCustomScrollbar.min.css'>
     <link rel="stylesheet" href="css/style.css">    
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
   </head>
   <body>
@@ -16,6 +17,9 @@
   <div class="chat-title">
     <h1>BotBank! demo</h1>
     <figure class="avatar">
+
+      <!-- this url must be so far consistent with the one displayed in index.js (addBotLoader function)
+           It should be injected by JQuery -->
       <img src="images/avatar-bot-75.png" /></figure>
   </div>
   <div class="messages">
@@ -34,22 +38,5 @@
 <script src="js/index.js"></script>
 
 
-<!--    <ul id="messages"></ul>
-    <form action="">
-      <input id="m" autocomplete="off" /><button>Send</button>
-    </form>
-    <script src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
-    <script src="http://code.jquery.com/jquery-1.11.1.js"></script>
-    <script>
-      var socket = io();
-      $('form').submit(function(){
-        socket.emit('chat message', $('#m').val());
-        $('#m').val('');
-        return false;
-      });
-      socket.on('chat message', function(msg){
-        $('#messages').append($('<li>').text(msg));
-      });
-    </script>-->
   </body>
 </html>
